[package]
name = "big_s"
version = "1.0.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
license = "MIT/Apache-2.0/CC0-1.0"
description = "Rust's missing `String` literal"
documentation = "https://docs.rs/S"
homepage = "https://github.com/brson/S"
repository = "https://github.com/brson/S"
keywords = ["string", "literal"]
edition = "2018"

[dependencies]
